// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV Acre 1`] = `
"entreprise . chiffre d'affaires: 6165
indépendant . cotisations et contributions: 1165
indépendant . cotisations et contributions . avec dividendes: 1165
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 6165
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . nette . avec dividendes: 5000
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 26"
`;

exports[`calculate simulations-professions-libérales > CIPAV Acre 2`] = `
"entreprise . chiffre d'affaires: 24133
indépendant . cotisations et contributions: 4133
indépendant . cotisations et contributions . avec dividendes: 4133
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 24133
indépendant . rémunération . impôt: 552
indépendant . rémunération . impôt . avec dividendes: 552
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19448
indépendant . rémunération . nette . avec dividendes: 20000
protection sociale . retraite . base: 11
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 99"
`;

exports[`calculate simulations-professions-libérales > CIPAV Acre 3`] = `
"entreprise . chiffre d'affaires: 70159
indépendant . cotisations et contributions: 20159
indépendant . cotisations et contributions . avec dividendes: 20159
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 70159
indépendant . rémunération . impôt: 8617
indépendant . rémunération . impôt . avec dividendes: 8617
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41383
indépendant . rémunération . nette . avec dividendes: 50000
protection sociale . retraite . base: 31
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 311"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 1`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: undefined
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 2`] = `
"entreprise . chiffre d'affaires: 3354
indépendant . cotisations et contributions: 1354
indépendant . cotisations et contributions . avec dividendes: 1354
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 3354
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . nette . avec dividendes: 2000
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 14"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 3`] = `
"entreprise . chiffre d'affaires: 6896
indépendant . cotisations et contributions: 1896
indépendant . cotisations et contributions . avec dividendes: 1896
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 6896
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . nette . avec dividendes: 5000
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 29"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 4`] = `
"entreprise . chiffre d'affaires: 13368
indépendant . cotisations et contributions: 3368
indépendant . cotisations et contributions . avec dividendes: 3368
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 13368
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . nette . avec dividendes: 10000
protection sociale . retraite . base: 6
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 55"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 5`] = `
"entreprise . chiffre d'affaires: 148036
indépendant . cotisations et contributions: 48036
indépendant . cotisations et contributions . avec dividendes: 48036
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 148036
indépendant . rémunération . impôt: 26248
indépendant . rémunération . impôt . avec dividendes: 26248
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73752
indépendant . rémunération . nette . avec dividendes: 100000
protection sociale . retraite . base: 31
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 925"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 6`] = `
"entreprise . chiffre d'affaires: 1283863
indépendant . cotisations et contributions: 283863
indépendant . cotisations et contributions . avec dividendes: 283863
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 1283863
indépendant . rémunération . impôt: 471589
indépendant . rémunération . impôt . avec dividendes: 471589
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528411
indépendant . rémunération . nette . avec dividendes: 1000000
protection sociale . retraite . base: 32
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 1806"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"entreprise . chiffre d'affaires: 87337
indépendant . cotisations et contributions: 27337
indépendant . cotisations et contributions . avec dividendes: 27337
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 87337
indépendant . rémunération . impôt: 11728
indépendant . rémunération . impôt . avec dividendes: 11728
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48272
indépendant . rémunération . nette . avec dividendes: 60000
protection sociale . retraite . base: 31
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 450"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"entreprise . chiffre d'affaires: 70591
indépendant . cotisations et contributions: 20591
indépendant . cotisations et contributions . avec dividendes: 20591
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 70591
indépendant . rémunération . impôt: 8860
indépendant . rémunération . impôt . avec dividendes: 8860
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41140
indépendant . rémunération . nette . avec dividendes: 50000
protection sociale . retraite . base: 28
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 275"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 3`] = `
"entreprise . chiffre d'affaires: 55804
indépendant . cotisations et contributions: 15803
indépendant . cotisations et contributions . avec dividendes: 15803
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 55804
indépendant . rémunération . impôt: 6047
indépendant . rémunération . impôt . avec dividendes: 6047
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 33953
indépendant . rémunération . nette . avec dividendes: 40000
protection sociale . retraite . base: 25
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 189"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"entreprise . chiffre d'affaires: 95450
indépendant . cotisations et contributions: 35450
indépendant . cotisations et contributions . avec dividendes: 35450
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 95450
indépendant . rémunération . impôt: 11780
indépendant . rémunération . impôt . avec dividendes: 11780
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48220
indépendant . rémunération . nette . avec dividendes: 60000
protection sociale . retraite . base: 31
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 511"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"entreprise . chiffre d'affaires: 97495
indépendant . cotisations et contributions: 37496
indépendant . cotisations et contributions . avec dividendes: 37496
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 97495
indépendant . rémunération . impôt: 11793
indépendant . rémunération . impôt . avec dividendes: 11793
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48207
indépendant . rémunération . nette . avec dividendes: 60000
protection sociale . retraite . base: 31
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 525"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"entreprise . chiffre d'affaires: 94420
indépendant . cotisations et contributions: 34420
indépendant . cotisations et contributions . avec dividendes: 34420
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 94420
indépendant . rémunération . impôt: 11773
indépendant . rémunération . impôt . avec dividendes: 11773
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48227
indépendant . rémunération . nette . avec dividendes: 60000
protection sociale . retraite . base: 45
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 501"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"entreprise . chiffre d'affaires: 97495
indépendant . cotisations et contributions: 37496
indépendant . cotisations et contributions . avec dividendes: 37496
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 97495
indépendant . rémunération . impôt: 11793
indépendant . rémunération . impôt . avec dividendes: 11793
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48207
indépendant . rémunération . nette . avec dividendes: 60000
protection sociale . retraite . base: 31
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 525"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"entreprise . chiffre d'affaires: 94420
indépendant . cotisations et contributions: 34420
indépendant . cotisations et contributions . avec dividendes: 34420
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 94420
indépendant . rémunération . impôt: 11773
indépendant . rémunération . impôt . avec dividendes: 11773
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48227
indépendant . rémunération . nette . avec dividendes: 60000
protection sociale . retraite . base: 45
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 501"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"entreprise . chiffre d'affaires: 3054
indépendant . cotisations et contributions: 2054
indépendant . cotisations et contributions . avec dividendes: 2054
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 3054
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
indépendant . rémunération . nette . avec dividendes: 1000
protection sociale . retraite . base: 7
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 12"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"entreprise . chiffre d'affaires: 45117
indépendant . cotisations et contributions: 5117
indépendant . cotisations et contributions . avec dividendes: 5117
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 45117
indépendant . rémunération . impôt: 5456
indépendant . rémunération . impôt . avec dividendes: 5456
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 34544
indépendant . rémunération . nette . avec dividendes: 40000
protection sociale . retraite . base: 43
protection sociale . retraite . base . trimestres: 0
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"entreprise . chiffre d'affaires: 1469
indépendant . cotisations et contributions: 969
indépendant . cotisations et contributions . avec dividendes: 969
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 1469
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
indépendant . rémunération . nette . avec dividendes: 500
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 2"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"entreprise . chiffre d'affaires: 2099
indépendant . cotisations et contributions: 1099
indépendant . cotisations et contributions . avec dividendes: 1099
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 2099
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
indépendant . rémunération . nette . avec dividendes: 1000
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 7"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"entreprise . chiffre d'affaires: 2730
indépendant . cotisations et contributions: 1230
indépendant . cotisations et contributions . avec dividendes: 1230
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 2730
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
indépendant . rémunération . nette . avec dividendes: 1500
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 10"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"entreprise . chiffre d'affaires: 3354
indépendant . cotisations et contributions: 1354
indépendant . cotisations et contributions . avec dividendes: 1354
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 3354
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . nette . avec dividendes: 2000
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 14"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"entreprise . chiffre d'affaires: 6896
indépendant . cotisations et contributions: 1896
indépendant . cotisations et contributions . avec dividendes: 1896
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 6896
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . nette . avec dividendes: 5000
protection sociale . retraite . base: 3
protection sociale . retraite . base . trimestres: 3
protection sociale . retraite . complémentaire: 29"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"entreprise . chiffre d'affaires: 13368
indépendant . cotisations et contributions: 3368
indépendant . cotisations et contributions . avec dividendes: 3368
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 13368
indépendant . rémunération . impôt: 0
indépendant . rémunération . impôt . avec dividendes: 0
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . nette . avec dividendes: 10000
protection sociale . retraite . base: 6
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 55"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"entreprise . chiffre d'affaires: 148036
indépendant . cotisations et contributions: 48036
indépendant . cotisations et contributions . avec dividendes: 48036
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 148036
indépendant . rémunération . impôt: 26248
indépendant . rémunération . impôt . avec dividendes: 26248
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73752
indépendant . rémunération . nette . avec dividendes: 100000
protection sociale . retraite . base: 31
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 925"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"entreprise . chiffre d'affaires: 1283863
indépendant . cotisations et contributions: 283863
indépendant . cotisations et contributions . avec dividendes: 283863
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 1283863
indépendant . rémunération . impôt: 471589
indépendant . rémunération . impôt . avec dividendes: 471589
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528411
indépendant . rémunération . nette . avec dividendes: 1000000
protection sociale . retraite . base: 32
protection sociale . retraite . base . trimestres: 4
protection sociale . retraite . complémentaire: 1806"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 30000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 30000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 300000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 20000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 300000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 400000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 120000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 50000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 20000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"entreprise . chiffre d'affaires: undefined
indépendant . cotisations et contributions: undefined
indépendant . cotisations et contributions . avec dividendes: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . rémunération . brute: 4000
indépendant . rémunération . impôt: undefined
indépendant . rémunération . impôt . avec dividendes: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . nette . avec dividendes: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . base . trimestres: undefined
protection sociale . retraite . complémentaire: 0"
`;
